[gd_scene load_steps=4 format=3 uid="uid://sam2crkn2i14"]

[ext_resource type="Texture2D" uid="uid://bc6svwghxbq3g" path="res://Sprites/UI/heart.png" id="1_3nch6"]
[ext_resource type="Script" path="res://Scripts/Misc/GameplayUi.gd" id="1_8tmv4"]
[ext_resource type="Texture2D" uid="uid://du6g31xprh37n" path="res://Sprites/UI/youDied.png" id="3_t7p1i"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_8tmv4")

[node name="Heart1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(60, 64)
texture = ExtResource("1_3nch6")

[node name="Heart2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(115, 64)
texture = ExtResource("1_3nch6")

[node name="Heart3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(170, 64)
texture = ExtResource("1_3nch6")

[node name="youDied" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(933, 558)
texture = ExtResource("3_t7p1i")
